--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.2-node-browsers
+      - image: circleci/mysql:8.0.4
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test_db
+          MYSQL_USER: user
+          MYSQL_PASSWORD: passw0rd
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -49,8 +55,15 @@ jobs:
             - node_modules
 
       # prepare the database
-      - run: touch storage/testing.sqlite
-      - run: php artisan migrate --env=testing --database=mysql --force
+      # - run: touch storage/testing.sqlite
+      # - run: php artisan migrate --env=testing --database=mysql --force
+
+      - run:
+        name: Install MySQL CLI; Import dummy data; run an example query
+        command: |
+          sudo apt-get install default-mysql-client
+          mysql -h 127.0.0.1 -u user -ppassw0rd test_db < sql-data/dummy.sql
+          mysql -h 127.0.0.1 -u user -ppassw0rd --execute="SELECT * FROM test_db.users"
 
       # run tests with phpunit or codecept
       #- run: ./vendor/bin/phpunit
